--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,12 +59,13 @@
                 android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginEnd="@dimen/_20sdp"
+                android:background="@drawable/bg_cut_shape"
                 android:fontFamily="@font/open_sans_regular"
                 android:gravity="start"
                 android:padding="@dimen/_2sdp"
                 android:paddingStart="@dimen/_11sdp"
                 android:text="@string/email_is_required"
-                android:textColor="@color/colorred"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_10sdp"
                 android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@+id/til_emailormobile_view">
@@ -100,12 +101,13 @@
                 android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginEnd="@dimen/_20sdp"
+                android:background="@drawable/bg_cut_shape"
                 android:fontFamily="@font/open_sans_regular"
                 android:gravity="start"
                 android:padding="@dimen/_2sdp"
                 android:paddingStart="@dimen/_11sdp"
                 android:text="@string/password_is_required"
-                android:textColor="@color/colorred"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_10sdp"
                 android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@+id/til_password_viewlogin">
